compiler/tools/fpp-to-dict/test/top/missingUserDataSizeConstant.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingUserDataSizeConstant.fpp:25.1
topology T {
^
error: cannot find constant `CONTAINER_USER_DATA_SIZE` in this scope
note: when constructing a dictionary, the constant Fw.DpCfg.CONTAINER_USER_DATA_SIZE must be defined
